# libmihomo-android

./: .gitignore  .golangci.yml  CHANGELOG.md  MAINTENANCE.md  README.md  SECURITY.md  build-native.sh  build.gradle.kts  consumer-rules.pro  detekt.yml  oviron-signing.pub.asc  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: check-jni-exports.sh  validate-jni-keep.sh
src/main/cpp/: CMakeLists.txt  bridge.h  jni_helper.cpp  libclash.h  native-lib.cpp
src/main/jni/core/: action.go  bridge.c  bridge.go  common.go  config_apply.go  connections.go  constant.go  crash_debug.go  crash_release.go  file_ops.go  geo_data.go  go.mod  go.sum  lib.go  lifecycle.go  log_bridge.go  log_file.go  log_stream.go  probe.go  providers.go  proxies.go  tunnel_state.go
src/main/jni/core/platform/: limit.go  procfs.go
src/main/jni/core/tun/: tun.go
src/main/kotlin/io/github/oviron/libmihomo/: Clash.kt  InvokeInterface.kt  TunInterface.kt
